forceD-appX/main/default/objects/A__c/A__c.object-meta.xml
<CustomObject>
    <label>A</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>