forceD-appX/main/default/objects/A__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New</label>
    <type>Date</type>
</CustomField>