forceD-appX/main/default/objects/A__c/fields/One__c.field-meta.xml
<CustomField>
    <fullName>One__c</fullName>
    <label>One</label>
    <length>50</length>
    <type>Text</type>
</CustomField>