forceD-appX/main/default/objects/A__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <displayFormat>t-{000}</displayFormat>
    <label>Test</label>
    <type>AutoNumber</type>
</CustomField>